# Device-independent-quantum-key-distribution-implementation

./: .pre-commit-config.yaml  README.md  main.py  ns_hierarchy.py  pyproject.toml  pyrightconfig.json
src/: main.py  optimizations.py  test.py  test_guessing_probability.py  test_ncpol.py  utilities.py
