[project]
name = "device-independent-quantum-key-distribution-implementation"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cvxpy>=1.7.3",
    "mosek>=11.0.29",
    "ncpol2sdpa>=1.14.0",
    "numpy>=2.3.3",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest>=9.0.1",
]
